# tmux-thumbs

./: Cargo.toml  README.md  tmux-thumbs-install.sh  tmux-thumbs.tmux
.cargo/: config.toml
.github/workflows/: release.yml  rust.yml
src/: alphabets.rs  colors.rs  main.rs  state.rs  swapper.rs  view.rs
