[package]
name = "thumbs"
version = "0.9.6"
authors = ["Ferran Basora <fcsonline@gmail.com>"]
edition = "2018"
description = "A lightning fast version copy/pasting like vimium/vimperator"
repository = "https://github.com/fcsonline/tmux-thumbs"
keywords = ["rust", "tmux", "tmux-plugin", "vimium", "vimperator"]
license = "MIT"

[dependencies]
termion = "4.0.2"
regex = "1.7.1"
clap = "4.5.4"
base64 = "0.22.1"
unicode-width = "0.2.2"
lazy_static = "1.4.0"

[[bin]]
name = "thumbs"
path = "src/main.rs"

[[bin]]
name = "tmux-thumbs"
path = "src/swapper.rs"
